# Crosshair-Easy

./: .flutter-plugins  .flutter-plugins-dependencies  .replit  404.html  README.md  index.html  pubspec.yaml  server.js
.dart_tool/: package_config.json  package_config_subset
lib/: main.dart
lib/models/: crosshair_model.dart  profile_model.dart
lib/screens/: about_screen.dart  export_screen.dart  home_screen.dart  profile_screen.dart  settings_screen.dart
lib/services/: crosshair_service.dart  export_service.dart  profile_service.dart
lib/theme/: app_theme.dart
lib/utils/: constants.dart  ffi_bridge.dart  logger.dart
lib/widgets/: advanced_color_picker.dart  color_picker.dart  crosshair_preview.dart  custom_slider.dart  shape_selector.dart
native/: CMakeLists.txt  crosshair_engine.cpp  crosshair_engine.h
windows/: CMakeLists.txt
windows/runner/: Runner.rc  main.cpp
